@@ -250,6 +250,10 @@ AT_CHECK_MACRO([BOOST_CONVERSION])
 AT_CHECK_MACRO([BOOST_FOREACH])
 AT_CHECK_MACRO([BOOST_FORMAT])
 AT_CHECK_MACRO([BOOST_UTILITY])
+AT_CHECK_MACRO([BOOST_SMART_PTR])
+AT_CHECK_MACRO([BOOST_STRING_ALGO])
+AT_CHECK_MACRO([BOOST_TRIBOOL])
+AT_CHECK_MACRO([BOOST_TUPLE])
 AT_CHECK_MACRO([BOOST_VARIANT])
 
 AT_BANNER([Boost libraries])
